--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
             <h2 style="text-align:center; margin-bottom:20px;">Nossos Produtos</h2>
             <div class="container">
                 <div class="produto">
-                    <h2>Em breve...</h2>
-                    <p>Nossos produtos estarão disponíveis em breve. Acompanhe nas redes sociais!</p>
+                    <img src="vela-massagem.jpg" alt="Vela de Massagem" style="width:100%; border-radius: 8px; margin-bottom: 15px;">
+                    <h2>Vela de Massagem</h2>
+                    <p>R$ 30,00</p>
+                    <a class="botao" href="https://wa.me/551998390185?text=Olá!%20Gostaria%20de%20comprar%20a%20Vela%20de%20Massagem." target="_blank">Comprar</a>
                 </div>
             </div>
         </section>
