--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <!-- WhatsApp flutuante -->
     <div class="whatsapp">
-        <a href="https://wa.me/5198390185" target="_blank">
+        <a href="https://wa.me/(55)51998390185" target="_blank">
             <img src="whatsapp.png" alt="Fale conosco no WhatsApp">
         </a>
     </div>
