--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <img src="vela-massagem.jpg" alt="Vela de Massagem" style="width:100%; border-radius: 8px; margin-bottom: 15px;">
                     <h2>Vela de Massagem</h2>
                     <p>R$ 30,00</p>
-                    <a class="botao" href="https://wa.me/5198390185?text=Olá!%20Gostaria%20de%20comprar%20a%20Vela%20de%20Massagem." target="_blank">Comprar</a>
+                    <a class="botao" href="https://wa.me/(55)51998390185?text=Olá!%20Gostaria%20de%20comprar%20a%20Vela%20de%20Massagem." target="_blank">Comprar</a>
                 </div>
             </div>
         </section>
